examples/conf/TLSRoute_edge_test-tls-tcp.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: test-tls-tcp
  namespace: edgion-test
spec:
  parentRefs:
    - name: tls-terminate-gateway
      namespace: edgion-test
      sectionName: tls-terminate-tcp
  hostnames:
    - "tcp.example.com"  # SNI hostname
  rules:
    - backendRefs:
        - name: test-tcp
          port: 30010
